add fontawsome kit script to index.html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Meal Finder</title>
   </head>
   <body>
+    <!-- FontAwesome Script -->
+    <script
+      src="https://kit.fontawesome.com/15e65efbb4.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Script tag -->
     <script src="app.js"></script>
   </body>
