Add Base html in index file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Meal Finder</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Meal Finder</h1>
+      <div class="flex">
+        <form id="submit" class="flex">
+          <input
+            type="text"
+            id="search"
+            placeholder="Search for meals or keywords"
+          />
+          <button type="submit" class="search-btn">
+            <i class="fas fa-search"></i>
+          </button>
+        </form>
+        <button id="random" class="random-btn">
+          <i class="fas fa-random"></i>
+        </button>
+      </div>
+    </div>
+
     <!-- FontAwesome Script -->
     <script
       src="https://kit.fontawesome.com/15e65efbb4.js"
