--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
           <i class="fas fa-random"></i>
         </button>
       </div>
+
+      <!-- Generated html -->
+      <div id="results-heading"></div>
+      <div id="meals" class="meals"></div>
+      <div id="single-meal"></div>
     </div>
 
     <!-- FontAwesome Script -->
