Add variables to app.js file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             id="search"
             placeholder="Search for meals or keywords"
           />
-          <button type="submit" class="search-btn">
+          <button type="submit" id="submit" class="search-btn">
             <i class="fas fa-search"></i>
           </button>
         </form>
@@ -26,7 +26,7 @@
       </div>
 
       <!-- Generated html -->
-      <div id="results-heading"></div>
+      <div id="result-heading"></div>
       <div id="meals" class="meals"></div>
       <div id="single-meal"></div>
     </div>
